# unitree_ros

./: .gitignore  .gitmodules  README.md
extend_robot_state_publisher/: CMakeLists.txt  package.xml
extend_robot_state_publisher/src/: robot_state_publisher_node.cpp
p3d_tf/: CMakeLists.txt  package.xml
p3d_tf/include/: gazebo_ros_p3d_tf.h
p3d_tf/src/: gazebo_ros_p3d_tf.cpp
robots/a1_description/xacro/: gazebo.xacro  leg.xacro  robot.xacro
robots/a1_imu_description/: CMakeLists.txt  package.xml
robots/a1_imu_description/config/: robot_control.yaml
robots/a1_imu_description/launch/: a1_rviz.launch
robots/a1_imu_description/urdf/: a1_imu.urdf
robots/a1_imu_description/xacro/: const.xacro  gazebo.xacro  leg.xacro  robot.xacro
robots/a1_rw_description/xacro/: gazebo.xacro  robot.xacro  transmission.xacro
robots/aliengo_description/launch/: aliengo_rl_rviz.launch  aliengo_rviz.launch  check_joint.rviz
robots/aliengo_description/rviz/: aliengo.rviz  aliengo_rl.rviz
robots/aliengo_description/xacro/: camera_d435.xacro  const.xacro  depthCamera.xacro  gazebo.xacro  robot.xacro
robots/arcdog_description/: CMakeLists.txt  package.xml
robots/arcdog_description/config/: robot_control.yaml
robots/arcdog_description/launch/: display.launch
robots/arcdog_description/scripts/: build_arcdog.sh
robots/arcdog_description/xacro/: const.xacro  depthCamera.xacro  gazebo.xacro  leg.xacro  robot.xacro  ultraSound.xacro
robots/arclab_robot_description/: CMakeLists.txt  package.xml
robots/arclab_robot_description/config/: robot_control.yaml
robots/arclab_robot_description/launch/: display.launch
robots/arclab_robot_description/robots/manipulator/franka/: README.md  panda.urdf.xacro  panda_arm.xacro  panda_hand.xacro
robots/arclab_robot_description/robots/quadrupedal_robot/: arcdog.xacro  arcdog_generated.urdf  arcdog_mini.xacro  robot.xacro
robots/arclab_robot_description/robots/quadrupedal_robot/arcdog/: const.xacro
robots/arclab_robot_description/robots/quadrupedal_robot/arcdog_mini/: const.xacro
robots/arclab_robot_description/robots/quadrupedal_robot/common/: gazebo.xacro  leg.xacro  transmission.xacro
robots/arclab_robot_description/scripts/: build_arcdog_mini.sh  build_panda.sh
robots/arclab_robot_description/urdf/manipulator/franka/: panda.urdf
robots/arclab_robot_description/urdf/quadrupedal_robot/arcdog/: arcdog_ocs2.urdf  arcdog_test.urdf
robots/go1_description/launch/: check_joint.rviz
robots/go1_description/urdf/: go1.urdf
robots/go1_description/xacro/: camera_d435.xacro  depthCamera.xacro  gazebo.xacro  robot.xacro
unitree_controller/: CMakeLists.txt
unitree_controller/src/: lowStatePub.cpp  move_onto_conveyor_publisher.cpp  move_publisher.cpp  servo.py
unitree_gazebo/: CMakeLists.txt
unitree_gazebo/launch/: gazebo_terrain.launch  gazebo_world.launch  gazebo_world_inner.launch  normal.launch  normal_arcdog.launch  normal_collab.launch  robot1.launch  robot2.launch  robot_map.launch  robot_map_test.launch  rviz.launch  test_terrain.launch  test_world.launch
unitree_gazebo/plugin/: draw_force_plugin.cc  foot_contact_plugin_rviz.cc
unitree_gazebo/scripts/: IsaacGymInterface.py  trrain.py
unitree_gazebo/urdf/: innermap.urdf  map.urdf  outermap.urdf  outermap.urdf.xacro  simple.urdf.xacro  simple1.urdf.xacro  test.xacro
unitree_gazebo/urdf/obstacles/: Akro_mils.urdf.xacro  New_600x400_2way_Wooden_Pallet.urdf.xacro  New_EURO_EPAL_Pallet.urdf.xacro  Nisopa_Kerb_Ramp.urdf.xacro  Plastic_Curb_Ramp.urdf.xacro  Plastic_Storage_Crate.urdf.xacro  Plywood_16mm_sheet.urdf.xacro  Plywood_3mm_sheet.urdf.xacro  Plywood_wall.urdf.xacro  seat_pad.urdf.xacro  seat_pad_inner_compound.urdf.xacro  seat_pad_outer_compound.urdf.xacro  solid_wood_block.urdf.xacro
unitree_gazebo/urdf/terrain/: innermap.urdf.xacro  innermap1.urdf  map.urdf  map.urdf.xacro  outermap1.urdf  terrain1map.urdf  terrain1map.urdf.xacro  terrain2map.urdf  terrain2map.urdf.xacro  terrain3map.urdf  terrain3map.urdf.xacro  terrain4map.urdf  terrain4map.urdf.xacro  terrain5map.urdf  terrain5map.urdf.xacro  terrain6map.urdf  terrain6map.urdf.xacro  terrainmap.urdf  terrainmap.urdf.xacro  terrainmap1.urdf  terrainmap1.urdf.xacro  terrainmap2.urdf  terrainmap3.urdf  xacro2urdf.sh
unitree_gazebo/urdf/test/: terrain1_inner.urdf.xacro  terrain2_inner.urdf.xacro  terrain3_inner.urdf.xacro  terrain3_inner2.urdf.xacro  terrain4_inner.urdf.xacro  terrain4_inner2.urdf.xacro  terrain5_inner.urdf.xacro  terrain5_inner2.urdf.xacro  terrain6_inner.urdf.xacro  terrain6_inner2.urdf.xacro  terrain_inner.urdf.xacro
unitree_gazebo/worlds/: beam.world  competition.world  competition1.world  competition_map.world  earth.world  friction_ground.world  space.world  stairs.world  stairs_new.world  stairs_single.world  wall.world
unitree_legged_control/src/: joint_controller.cpp
unitree_legged_msgs/: CMakeLists.txt
unitree_legged_msgs/msg/: FootForce.msg  FootPos.msg  Observation.msg
unitree_matlab_sim/: Jb.m  dJb.m  fk.m  leg.slx  param_init.m
