<package format="2">
  <name>extend_robot_state_publisher</name>
  <version>0.0.1</version>
  <description>
    This package is a modified version of<a href="http://wiki.ros.org/robot_state_publisher">robot_state_publisher</a>, 
    which allows you use other rosparam variables to load the robot urdf.
  </description>

  <maintainer email="holmeszhui@gmail.com">holmes</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>kdl_parser</depend>
  <depend>rosconsole</depend>
  <depend>roscpp</depend>
  <depend>rostime</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_kdl</depend>

  <build_depend>liborocos-kdl-dev</build_depend>
  <build_depend>liburdfdom-headers-dev</build_depend>
  <build_depend>eigen</build_depend>

  <build_export_depend>liborocos-kdl-dev</build_export_depend>

  <exec_depend>liborocos-kdl</exec_depend>

</package>
