<?xml version="1.0"?>
<package format="2">
    <name>gazebo_ros_p3d_tf</name>
    <version>0.0.0</version>
    <description>The unitree_gazebo package. It can start a gazebo simulation</description>

    <maintainer email="laikago@unitree.cc">unitree</maintainer>
    <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_dev</build_depend>
  <!--
    Need to use gazebo_dev since run script needs pkg-config
    See: https://github.com/ros-simulation/gazebo_ros_pkgs/issues/323 for more info
  -->
  <exec_depend>gazebo_dev</exec_depend>

  <!-- <depend>gazebo_ros</depend> -->
  <!-- <depend>gazebo_msgs</depend> -->
  <!-- <depend>geometry_msgs</depend> -->
  <!-- <depend>sensor_msgs</depend> -->
  <!-- <depend>trajectory_msgs</depend> -->
  <!-- <depend>visualization_msgs</depend> -->
  <!-- <depend>std_srvs</depend> -->
  <depend>roscpp</depend>
  <!-- <depend>rospy</depend> -->
  <!-- <depend>nodelet</depend> -->
  <!-- <depend>angles</depend> -->
  <depend>nav_msgs</depend>
  <!-- <depend>urdf</depend> -->
  <depend>tf</depend>
  <depend>tf2_ros</depend>
  <!-- <depend>dynamic_reconfigure</depend> -->
  <!-- <depend>rosgraph_msgs</depend> -->
  <!-- <depend>image_transport</depend> -->
  <!-- <depend>rosconsole</depend> -->
  <!-- <build_depend>message_generation</build_depend> -->
  <!-- <exec_depend>message_runtime</exec_depend> -->
  <!-- <depend>std_msgs</depend> -->


    <!-- The export tag contains other, unspecified, tags -->
    <export>
        <gazebo_ros plugin_path="${prefix}/../../lib" gazebo_media_path="${prefix}" />
    </export>
</package>
