<?xml version="1.0"?>
<package format="2">
    <name>arcdog_description</name>
    <version>0.0.0</version>
    <description>The arcdog_description package</description>

    <maintainer email="laikago@unitree.cc">unitree</maintainer>
    <license>TODO</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>std_msgs</depend>
</package>