<?xml version="1.0"?>
<package format="2">
  <name>arclab_robot_description</name>
  <version>0.0.0</version>
  <description>The arclab_robot_description package</description>

  <maintainer email="ruihuang.scut@gmail.com">Rui Huang</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>genmsg</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>tf</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>tf</exec_depend>
  <exec_depend>xacro</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>

  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
